First proof of concept for variant picker docs component

--- a/src/content/studio/getting-started.mdx
+++ b/src/content/studio/getting-started.mdx
@@ -10,6 +10,8 @@ Hello! This article gets you up and running with Apollo Studio. None of this set
 
 You can use Studio with any GraphQL server. Certain features (such as [metrics reporting](./metrics/usage-reporting/)) are currently best supported by [Apollo Server](/apollo-server/).
 
+<VariantPicker/>
+
 ## 1. Create your account
 
 You can sign up for Studio with either your GitHub identity or a username and password.
