--- a/src/content/technotes/TN0005-overload-protection.mdx
+++ b/src/content/technotes/TN0005-overload-protection.mdx
@@ -13,11 +13,11 @@ One of the easiest ones to describe is the [thundering herd problem](https://en.
 
 - Pod failures in Kubernetes that cause a smaller amount of pods to handle the same amount of traffic
 - Push notifications/marketing events that drive traffic to the applications in a short period
-- Features deployed that increase the load on the graph more than expected.
+- Features deployed that increase the load on the graph more than expected
 
 A more graph-based problem is adding a entity relationship in the schema that causes a significant increase in traffic. For example in the [Star Wars schema](https://studio.apollographql.com/public/star-wars-swapi/home?variant=current), imagine if there was no link from `Person` to `Film`(though `PersonFilmsConnection`) and it was added today. Until the usage of that new connection in the schema flattens out, every deployment or event that causes traffic could cause a large amount of new load directly attributed to the change for the owner of the `Film` entity.
 
-The last type of load-generating event to talk about are organic stress events. These are events that happen outside your company's control and cause excess stress on your system. An easy example of this can be found when examining online stores. Say someone with many Twitter followers tweets your store's page with an item they like. Their followers will flood this page, causing an organic increase in pressure in the system.
+The last type of load-generating events to talk about are organic stress events. These are events that happen outside your company's control and cause excess stress on your system. An easy example of this can be found when examining online stores. Say someone with many Twitter followers tweets your store's page with an item they like. Their followers will flood this page, causing an organic increase in pressure in the system.
 
 ## Now, what do we do about this?
 
@@ -30,8 +30,6 @@ const app = require("express")();
 const protect = require("overload-protection")("express");
 app.use(protect);
 ```
-
-\*_I will be using express in these examples. This does work for other frameworks._
 
 ## Use With Apollo Server Express
 
@@ -59,6 +57,8 @@ async function startApolloServer(typeDefs, resolvers) {
 }
 ```
 
-This approach and additions also work if you are using the `@apollo/subgraph` to create your subgraphs in a similar way. Overload protection is not specific to GraphQL, so it's best to handle it outside of Apollo software. The team at apollo already has a guide on how to change to `apollo-server-express` from `apollo-server` to allow the use of additional `express` middleware. The guide can be found [here](https://www.apollographql.com/docs/apollo-server/integrations/middleware#swapping-out-apollo-server).
+This approach and additions also work if you are using the `@apollo/subgraph` to create your subgraphs in a similar way. Overload protection is not specific to GraphQL, so it's best to handle it outside of Apollo software. If you are running `apollo-server` instead, we have a guide on how to change to `apollo-server-express` from `apollo-server` to allow the use of additional `express` middleware. The guide can be found [here](https://www.apollographql.com/docs/apollo-server/integrations/middleware#swapping-out-apollo-server).
 
-\***\*Add something here about why its good for both gateway and subgraphs\*\***
+## Does this belong on the router or subgraph?
+
+The short answer is both, for different reasons. The router to allow to protect overall avaibility of the graph. A subgraph should have overload protection to reduce the error rates of quries that include data from that spesfic subgraph.
