--- a/src/content/basics/index.mdx
+++ b/src/content/basics/index.mdx
@@ -15,7 +15,7 @@ import {
 import {DOCSET_ICONS} from '../../components/DocsetMenu';
 import {SiDiscourse, SiGithub, SiTwitter, SiYoutube} from 'react-icons/si';
 
-Apollo is a platform for building a [**unified supergraph**](./intro/platform/), a communication layer that helps you manage the flow of data between your application clients (such as web and native apps) and your backend services. At the heart of the supergraph is a query language called **GraphQL**.
+Apollo is a platform for building a [**supergraph**](./intro/platform/), a unified network of all your data, services, and capabilities that connects to your application clients (such as web and native apps). At the heart of the supergraph is a query language called **GraphQL**.
 
 <Odyssey />
 
