Fix a couple broken links

--- a/src/content/basics/intro/platform.mdx
+++ b/src/content/basics/intro/platform.mdx
@@ -164,7 +164,7 @@ The Apollo Studio [Free plan](https://www.apollographql.com/pricing/) provides t
 
 - Team collaboration and access management via [organizations](/studio/org/organizations/).
 
-- [Slack notifications](/studio/slack-integration/) for schema changes and daily metrics reports.
+- [Slack notifications](/studio/notification-setup/) for schema changes and daily metrics reports.
 
 ### Paid features
 
@@ -185,7 +185,7 @@ Apollo provides GraphQL client libraries for the following platforms:
 
 * [React / JavaScript](/react/)
     * In addition to Apollo's official React support, there are community-maintained libraries for [other popular view layers](/react/integrations/integrations/).
-* [iOS](/iOS/)
+* [iOS](/ios/)
 * [Kotlin](/kotlin/)
 
 These are all customizable, open-source libraries with powerful caching and state management features. Client-side caching enables an application to locally replicate the parts of your supergraph that it cares about. The application can then query _itself_ for data if it's already present, which dramatically improves performance by eliminating redundant network requests.
