--- a/src/content/studio/schema-checks.mdx
+++ b/src/content/studio/schema-checks.mdx
@@ -42,7 +42,7 @@ To enable schema checks for your graph, do the following if you haven't yet:
 
 Let's say you've made local changes to your GraphQL server's schema. After you [complete the prerequisites](#prerequisites), you can run schema checks against those changes with the `rover graph check` command.
 
-> **Important:** If your graph is [federated](/federation/), use [`rover subgraph`](/rover/subgraphs/#checking-subgraph-schema-changes) commands instead of `rover graph` commands. These commands require one additional option, the `--name` of the subgraph you're operating on.
+> **Important:** If your graph is [federated](/federation/), use [`rover subgraph`](/rover/commands/subgraphs/#checking-subgraph-schema-changes) commands instead of `rover graph` commands. These commands require one additional option, the `--name` of the subgraph you're operating on.
 
 The `rover graph check` command looks like this:
 
