--- a/src/content/technotes/index.mdx
+++ b/src/content/technotes/index.mdx
@@ -4,8 +4,7 @@ title: Apollo Tech Notes
 
 This documentation set provides technical articles on specialized topics for Apollo tools and libraries. It is currently under development.
 
-import RecentNotes from '../../components/TechNotes/RecentNotes';
-import TagList from '../../components/TechNotes/TagList';
+import {RecentNotes, TagList} from '../../components/TechNotes';
 
 ## Recently updated
 
