more minor updates

--- a/src/content/technotes/TN0005-overload-protection.mdx
+++ b/src/content/technotes/TN0005-overload-protection.mdx
@@ -12,7 +12,8 @@ As you add capabilities and users to your supergraph, you might introduce new us
 A common source of overload in a system is the [thundering herd problem](https://en.wikipedia.org/wiki/Thundering_herd_problem), where a large number of processes or clients attempt to access limited computer resources. Many scenarios can cause this, for example:
 
 - Pod failures in Kubernetes cause a smaller amount of pods to handle the same amount of traffic.
-- A marketing campaign or viral social media post drives high traffic to an application in a short period.- A newly deployed feature introduces more load on the graph than expected.
+- A marketing campaign or viral social media post drives high traffic to an application in a short period.
+- A newly deployed feature introduces more load on the graph than expected.
 
 A more graph-based problem is adding a entity relationship in the schema that causes a significant increase in traffic. For example in the [Star Wars schema](https://studio.apollographql.com/public/star-wars-swapi/home?variant=current), imagine if there was no link from `Person` to `Film`(though `PersonFilmsConnection`) and it was added today. Until the usage of that new connection in the schema flattens out, every deployment or event that causes traffic could cause a large amount of new load directly attributed to the change for the owner of the `Film` entity.
 
@@ -62,7 +63,7 @@ Overload protection is not specific to GraphQL, so it's best to handle it outsid
 
 ## Protecting a supergraph
 
-When adding overload protection to a supergraph, a reasonable question is, "Do I add protection to my gateway/router, or to my individual subgraphs?" The short answer is "both":
+When adding overload protection to a supergraph, a reasonable question is, "Do I add protection to my gateway/router or to my individual subgraphs?" The short answer is "both":
 
 - Protecting the router protects the availability of the supergraph as a whole.
 - Protecting a subgraph reduces the error rate for queries that request data from that subgraph.
